kubernetes/apps/tlscert/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tlscert-server
  namespace: tlscert
spec:
  selector:
    app: tlscert-server
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
  type: ClusterIP
