kubernetes/apps/tlscert/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tlscert-server
  namespace: tlscert
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: 'api.tlscert.dev'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tlscert-server
                port:
                  name: grpc
